--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="section" id="plan">
                 <h1>Practicing Git at Berea College</h1>
                 <div class="minileft">
-                        <div><img src="draper.jpg" /></div>
+                        <div><img src="draper.jpg" style="width:400px;height:400px;" /></div>
                 </div>
 
 		<p>Ready to learn about version control through git? </p>
@@ -80,6 +80,9 @@
                 <li> <a href="http://rogerdudler.github.io/git-guide/">Really Simple Git Tutorial</a></li>
                 </ul>
         </div>
+		<div class="miniright">
+                        <div><img src="bruh.jpg" style="width:400px;height:400px;" align="middle"/></div>
+                </div>
 
 </body>
 </html>
