--- a/index.html
+++ b/index.html
@@ -49,30 +49,30 @@
         <div class="section" id="more">
                 <h2>More about open source</h2>
                 <p>Free, open source software is software that is
-                shared freely and available to build upon. It is a
-                adjective way to apply your skills to adjective projects
+                shared freely and available to build upon. It is an
+                efficient way to apply your skills to open source projects
                 and social causes. You can participate by writing or
                 reviewing code, answering users' questions,
-                translating the interface to another noun, making
+                translating the interface to another design, making
                 video tutorials to help new users, and myriad other
                 ways. Open source software is often produced by lots
-                of nouns collaborating across noun and noun, and
-                this event specially welcomes nouns to that style
-                of noun.</p>
+                of people collaborating across platforms and countries, and
+                this event specially welcomes new contributors to that style
+                of software development.</p>
 
                 <p>Open source participation is one way to gain
-                noun skills and make connections that will last
+                technical skills and make connections that will last
                 you through your career. Volunteer staff will include
                 professionals and academics who use open source
                 daily.</p>
         </div>
 
 	<div class="section">
-		An introduction to open source software engineering, the course covers the philosophy and practice of developing software 
-		in large, distributed teams. Students will explore social and technological aspects of this process by contributing directly 
+		An introduction to open source software engineering, the course covers the philosophy and practice of developing software
+		in large, distributed teams. Students will explore social and technological aspects of this process by contributing directly
 		to an existing open course project. In doing so, students will learn the tools, the techniques, and the strategies --
-		technical and social -- that are common to all developers working in teams through this semester-long exercise.		
-		
+		technical and social -- that are common to all developers working in teams through this semester-long exercise.
+
 		<span> <a href = "https://trello.com/b/rOmGk7LH/open-source-software-engineering"> Link to our Trello Page </a> </span>
 	</div>
 
